Fixed non-visible skip-links
CSS - z-index:100;

--- a/css/main.css
+++ b/css/main.css
@@ -221,6 +221,7 @@ a:focus {
     padding: 0.5em 0.75em;
     font-weight: bold;
     text-decoration: none;
+    z-index: 100;
 }
 
 .skip-links a:focus {
